Fixed palette overflow

--- a/style/activity.css
+++ b/style/activity.css
@@ -14,7 +14,6 @@
   z-index: 9999999;
 }
 
-.palette hr {
-  max-width: 100%;
-  width: auto;
+.palette .container {
+  width: 100%
 }
